--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     env:
-      RUNNER_TOOL_CACHE: /toolcache
+      DOCKER_BUILDKIT: 1
     
     steps:
       - name: Checkout do código
