atualiza o workflow de build para incluir etapas de configuração do Docker e altera o entrypoint do contêiner para usar bash

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,25 +12,6 @@ jobs:
       DOCKER_BUILDKIT: 1
       RUNNER_TOOL_CACHE: /toolcache
 
-    steps:
-      - name: Checkout do código
-        uses: actions/checkout@v4
-  
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.GIT_REGISTRY_USER }}
-          password: ${{ secrets.GIT_REGISTRY_PASSWORD }}
-          registry: ${{ secrets.GIT_REGISTRY }}
-  
-      # SEM MULTIPLATAFORMA
-      - name: Construir a imagem Docker
-        run: docker build -t ${{ secrets.GIT_REGISTRY }}/${{ secrets.GIT_OWNER }}/spliit:latest .
-      
-      - name: Enviar a imagem para o Gitea Registry
-        run: docker push ${{ secrets.GIT_REGISTRY }}/${{ secrets.GIT_OWNER }}/spliit:latest
-
-
     #steps:
     #  - name: Checkout do código
     #    uses: actions/checkout@v4
@@ -42,16 +23,36 @@ jobs:
     #      password: ${{ secrets.GIT_REGISTRY_PASSWORD }}
     #      registry: ${{ secrets.GIT_REGISTRY }}
     #
-    #  - name: Set up QEMU
-    #    uses: docker/setup-qemu-action@v3
-    #
-    #  - name: Set up Docker Buildx
-    #    uses: docker/setup-buildx-action@v3
-    #    
-    #  - name: Build e Push da imagem
-    #    uses: docker/build-push-action@v6
-    #    with:
-    #      platforms: linux/amd64,linux/arm64
-    #      context: .
-    #      push: true
-    #      tags: ${{ secrets.GIT_REGISTRY }}/${{ secrets.GIT_OWNER }}/spliit:latest
+    #  # SEM MULTIPLATAFORMA
+    #  - name: Construir a imagem Docker
+    #    run: docker build -t ${{ secrets.GIT_REGISTRY }}/${{ secrets.GIT_OWNER }}/spliit:latest .
+    #  
+    #  - name: Enviar a imagem para o Gitea Registry
+    #    run: docker push ${{ secrets.GIT_REGISTRY }}/${{ secrets.GIT_OWNER }}/spliit:latest
+
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v4
+    
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.GIT_REGISTRY_USER }}
+          password: ${{ secrets.GIT_REGISTRY_PASSWORD }}
+          registry: ${{ secrets.GIT_REGISTRY }}
+    
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+    
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
+      - name: Build e Push da imagem
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
+          context: .
+          push: true
+          tags: ${{ secrets.GIT_REGISTRY }}/${{ secrets.GIT_OWNER }}/spliit:latest
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GIT_REGISTRY_PASSWORD }}
