--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,11 +46,17 @@ jobs:
     
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with: # replace it with your local IP
+          config-inline: |
+            [registry.${{ secrets.GIT_REGISTRY }}]
         
       - name: Build e Push da imagem
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: |
+            linux/amd64
+            linux/arm64
+          file: ./Dockerfile
           context: .
           push: true
-          tags: ${{ secrets.GIT_OWNER }}/spliit:latest
+          tags: ${{ secrets.GIT_REGISTRY }}/${{ secrets.GIT_OWNER }}/spliit:latest
