remove suporte para a plataforma linux/amd64 na construção da imagem Docker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,8 @@ jobs:
       - name: Build e Push da imagem
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
+          #platforms: linux/amd64,linux/arm64
           context: .
           push: true
           tags: ${{ secrets.GIT_REGISTRY }}/${{ secrets.GIT_OWNER }}/spliit:latest
